--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@material-ui/styles": "^4.11.4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
     "eslint": "8.1.0",
