--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/styles": "^4.11.4",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "formidable-serverless": "^1.1.1",
     "formik": "^2.2.9",
     "mongoose": "^6.1.1",
     "next": "11.1.2",
