--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "bcrypt": "^5.0.1",
     "formidable-serverless": "^1.1.1",
     "formik": "^2.2.9",
+    "mongodb": "3.7.3",
     "mongoose": "^6.1.1",
     "next": "11.1.2",
-    "next-auth": "^4.0.5",
+    "next-auth": "3",
     "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
