--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "react-material-ui-carousel": "v2",
+    "slugify": "^1.6.4",
     "v3": "^0.0.0",
     "yup": "^0.32.11"
   },
